package com.zaozhuang.newborn.ui.activity

import android.view.View
import android.widget.TextView
import com.zaozhuang.newborn.R
import com.zaozhuang.newborn.ui.base.BaseActivity

class BabyKnowledgeActivity2 : BaseActivity() {


    var mBackView: View? = null
    var mTitleView: TextView? = null
    var tv: TextView? = null

    override fun getLayoutId(): Int {
        return R.layout.activity_baby_knowledge
    }

    override fun initView() {

        mBackView = findViewById(R.id.common_title_bar_back_image)
        mTitleView = findViewById(R.id.common_title_bar_title_text)
        tv = findViewById(R.id.tv)

        tv?.text = genData()
        mTitleView?.text = "育儿知识"
    }

    private fun genData() : String {

        return   """
           经历了漫长的而煎熬的怀胎十月，我们终于迎来了宝宝的到来！

我们更多的惊喜与感动，但也有一些措手不及。面对软软糯糯的新生儿，我们却不知道“从何下手”。

看到新生儿脸上有白色小点，身上也还有一层白色薄皮，并且还有一些小毛毛等。

特别是新手爸妈，看到这些就很着急，以为是新生儿不舒服，但其实这些都是正常现象，后面都会慢慢自行消退的。

那我们就一起来看看属于新生儿的42个知识点，看完就不用瞎担心了。

1.出生时身上覆盖的白色薄皮叫胎脂，能保护皮肤，不用去除会自然脱落。

2.前额、鼻子、上唇周围的白色小点是皮脂腺增生，能消退，是妈妈激素影响的。

3.鼻头上出现的大小的白色小点点叫粟粒疹，能自行消退。

4.牙龈或上颚中央的小囊肿叫马牙或板牙，可自行脱落。

5.身上的青色斑是色素细胞沉着导致的，再一岁以内会逐渐消退。

6.出生时身上的毳毛之后会自然脱落。

7.两侧脸颊上隆起的脂肪垫不白长，有助于吸收乳汁。

8.有可能会乳腺肿大甚至少量泌乳，都是正常的，是受妈妈激素的影响。

9.少量阴道出血是因为雌激素水平下降，子宫粘膜失去了雌激素的作用脱落所致，也叫假月经，是正常现象。

10.偶尔对眼是正常现象，因为眼肌发育不全，后期会逐渐恢复。

11.有些宝宝鼻梁宽，内眼角凸出的皱褶会挡住一部分眼白，看起来像对眼，但实际上是正常的，叫假性斜视。

12.睡觉时发出哼哼唧唧声可能是在说“梦话”。
13.呼吸道黏膜非常娇嫩，遇到刺激时容易打喷嚏，但打喷嚏不是感冒。

14.宝宝鼻腔窄，容易鼻塞，2-3个月后会消失。

15.枕秃是换发导致的正常现象，并不是“缺钙”。

16.宝宝感到有人触碰他的脸颊及嘴唇时，会把头转过来，叫觅食反应。

17.嘴巴里放入乳头、奶嘴或手指，接触到口腔上颚会自动吸吮，叫吸允反射。

18.宝宝头部如果变换姿势或受到惊吓时，会作出拥抱的动作，叫拥抱反射。

19.把手指或小棍子放在宝宝手掌上，他就会马上握住，叫握持反射。

20.握持反射的力度几乎可以将宝宝自己的身体吊起来。

21.用手托住宝宝腋下，让他站立起来，他会作出踏步的动作，叫踏步反射。

22.当宝宝的头转向某一侧时，同侧胳膊会伸直，另一侧则弯曲，像击剑一样，叫强直性反射。

23.刚出生吸第一口气时，气流经过喉咙会刺激声带振动，导致啼哭。

24.出生时血液中的二氧化碳浓度很高，要大口呼吸，否则容易缺氧。

25.出生后2-5天时尿液粉红色或有红褐色沉淀是正常现象，是因为体内白细胞含量高，多余的白细胞分解导致。

26.宝宝一天大便不超过七八次只要没有其他症状，精神状态良好，食欲良好就是正常现象。这是因为刚出生的宝宝肠胃消化吸收能力没有完全发育好。

27.宝宝一边吃奶一边大便，是正常现象。

28.有的宝宝出生后会出现毒性红斑，这和妈妈产前吃辛辣刺激食物或吃海鲜过敏有关。

29.毒性红斑一般5-7天后自行消退。
30.出生前几天体重下降7-10％是正常的，是因为体内水分减少，汗液尿液排泄蒸发有关，及时补充喂养，10天后就会逐渐没事。

31.不能挤压乳腺，可能会感染，甚至引起菌血症。

32.给宝宝包裹太紧太厚可能导致体热脱水呼吸困难缺氧而引起窒息而死。

33.宝宝出生48小时后开始出现黄疸，5-7天最严重，一般10-15天会渐渐渐渐消退。

34.黄疸从脸上开始出现，接下来是躯干和四肢，眼端越黄，黄疸值越高。

35.脐带脱落一般需要7-10天左右，有可能延迟到三周，超过21天未脱落建议就医。

36.脐带要在医院正规断脐，未正规断脐的宝宝发生脐炎的几率会增大10倍。

37.脐带脱落前，护理不当容易感染，可能引发败血症等疾病。

38.宝宝颈椎弯曲还没有形成，睡觉不需要枕枕头，一般建议三个月后枕枕头。

39.爽身粉不能预防红屁股，还可能导致毛孔堵塞。

40.先天性马蹄内翻足的患病几率是千分之一。

41.肺炎不一定伴有明显的咳嗽症状。

42.宝宝有下列情形时可能是肺炎:发烧、脸色红通、呼吸急促、口吞沫、鼻翼煽动，以及嘴唇和面部发青发紫等。 
            
        """.trimIndent()
    }

    override fun initListener() {
        mBackView!!.setOnClickListener { v: View? -> finish() }
    }

}